# automobile-microservice

./: .env  01-db.sh  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: api.py  entrypoint.sh  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  services.py  settings.py
app/migrations/models/: 1_20220123135733_None.sql  2_20220123162752_rename_table.sql
