[tool.poetry]
name = "automobile-microservice"
version = "0.1.0"
description = ""
authors = ["Hossein Sokhandan <iamsokhandan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.72.0"}
httpx = "^0.21.3"
tortoise-orm = {extras = ["asyncpg"], version = "^0.18.1"}
aerich = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
